Add host from API, trigger rescan
