# backend/internal/api/routes.go
@@ -16,11 +16,13 @@ func Routes(router *gin.Engine) {
 		r0.GET("/edit/:id/:name/*known", editHost) // api-hosts.go
 		r0.GET("/host/:id", getHost)               // api-hosts.go
 		r0.GET("/host/del/:id", delHost)           // api-hosts.go
+		r0.GET("/host/add/:mac", addHost)          // api-hosts.go
 
 		r0.GET("/config", getConfig)        // api-system.go
 		r0.GET("/notify_test", notifyTest)  // api-system.go
 		r0.GET("/status/*iface", getStatus) // api-system.go
 		r0.GET("/version", getVersion)      // api-system.go
+		r0.GET("/rescan", triggerRescan)    // api-system.go
 
 		r0.GET("/history", getHistory)                  // api-history.go
 		r0.GET("/history/:mac", getHistoryByMAC)        // api-history.go
